--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,23 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.firebase:firebase-database-ktx:19.7.0'
     implementation 'com.google.firebase:firebase-database:19.7.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:19.2.1'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
+    implementation 'com.google.firebase:firebase-analytics-ktx:18.0.2'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
+    //exoplayer implementaiton
+
+    //implementation 'com.google.android.exoplayer:exoplayer:2.12.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
+    //implementation 'com.google.android.exoplayer:exoplayer-core:2.12.0'
+    //implementation 'com.google.android.exoplayer:exoplayer-dash:2.12.0'
+   // implementation 'com.google.android.exoplayer:exoplayer-ui:2.7.3'
+//    implementation 'com.google.android.exoplayer:exoplayer-hls:2.12.0'
+//    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.12.0'
 }
