--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:18.0.2'
     implementation 'com.google.firebase:firebase-analytics-ktx:18.0.2'
 
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -57,11 +60,11 @@ dependencies {
 
     //exoplayer implementaiton
 
-    //implementation 'com.google.android.exoplayer:exoplayer:2.12.0'
+//    implementation 'com.google.android.exoplayer:exoplayer:2.12.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
-    //implementation 'com.google.android.exoplayer:exoplayer-core:2.12.0'
-    //implementation 'com.google.android.exoplayer:exoplayer-dash:2.12.0'
-   // implementation 'com.google.android.exoplayer:exoplayer-ui:2.7.3'
+//    implementation 'com.google.android.exoplayer:exoplayer-core:2.12.0'
+//    implementation 'com.google.android.exoplayer:exoplayer-dash:2.12.0'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.7.3'
 //    implementation 'com.google.android.exoplayer:exoplayer-hls:2.12.0'
 //    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.12.0'
 }
