--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     //exoplayer implementaiton
 
